--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  /* color: var(--foreground); */
-  /* background: var(--background); */
-  font-family: Arial, Helvetica, sans-serif;
-}
+@import url("https://fonts.cdnfonts.com/css/optima");
+@import url("https://db.onlinewebfonts.com/c/1f6ff2bc78822f67fe0ffe6dabf9b905?family=Nacelle+SemiBold");
+@import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Doto:wght@100..900&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 
 @layer base {
   :root {
@@ -16,9 +14,9 @@ body {
     --card-foreground: 240 10% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
-    --primary: 240 5.9% 10%;
+    --primary: 69, 74%, 46%; /*#B0CB1F*/
     --primary-foreground: 0 0% 98%;
-    --secondary: 240 4.8% 95.9%;
+    --secondary: 332 38% 26%; /* #5D2A42; */
     --secondary-foreground: 240 5.9% 10%;
     --muted: 240 4.8% 95.9%;
     --muted-foreground: 240 3.8% 46.1%;
@@ -83,7 +81,14 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+    font-family: "Funnel Sans", sans-serif;
   }
+}
+
+.funnel-sans {
+  font-family: "Funnel Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
 /* Tiptap Editor Styling */
@@ -108,4 +113,33 @@ body {
   position: absolute;
   left: 0;
   top: 0.25rem; /* Align the bullet vertically */
+}
+
+.hero {
+  position: relative;
+  overflow: hidden; /* Ensures the pseudo-element doesn't spill out */
+}
+
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../../public/hero-bg.gif") no-repeat center center;
+  background-size: cover;
+  background-blend-mode: darken;
+  opacity: 0.4;
+  z-index: 1;
+}
+
+.hero h2 {
+  position: relative;
+  line-height: 1.3;
+  z-index: 2; /* Ensures text appears above the pseudo-element */
+}
+
+.heading-font {
+  font-family: "Optima", sans-serif;
 }
