HERO BANNER WITH BLEND

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,12 +126,23 @@
   top: 0;
   left: 0;
   width: 100%;
+  opacity: 0.6;
   height: 100%;
   background: url("../../public/hero-bg.gif") no-repeat center center;
   background-size: cover;
-  background-blend-mode: darken;
-  opacity: 0.4;
-  z-index: 1;
+  z-index: -2;
+}
+
+.hero::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, #eddfd5, #ffffff);
+  opacity: 0.5;
+  z-index: -1;
 }
 
 .hero h2 {
