--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,6 +82,9 @@
   body {
     @apply bg-background text-foreground;
     font-family: "Funnel Sans", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-smooth: never;
   }
 }
 
@@ -153,4 +156,11 @@
 
 .heading-font {
   font-family: "Optima", sans-serif;
+}
+
+.footer-list > * {
+  margin-top: 16px !important;
+  font-size: 14px;
+  padding-bottom: 8px;
+  border-bottom: 0.75px ridge whitesmoke;
 }
