--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 22, 80%, 96%; /*#FDF3ED*/
     --foreground: 240 10% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 240 10% 3.9%;
@@ -120,7 +120,7 @@
 
 .hero {
   position: relative;
-  overflow: hidden; /* Ensures the pseudo-element doesn't spill out */
+  overflow: hidden;
 }
 
 .hero::before {
@@ -143,8 +143,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom, #eddfd5, #ffffff);
-  opacity: 0.5;
+  background: linear-gradient(to bottom, rgba(237, 223, 213, 0.4), #fdf3ed);
   z-index: -1;
 }
 
@@ -163,4 +162,8 @@
   font-size: 14px;
   padding-bottom: 8px;
   border-bottom: 0.75px ridge whitesmoke;
+}
+
+.shadow-one {
+  box-shadow: 0 0 42px rgba(93, 42, 66, 0.36);
 }
