--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -153,6 +153,34 @@
   z-index: 2; /* Ensures text appears above the pseudo-element */
 }
 
+.product-bg {
+  position: relative;
+  overflow: hidden;
+}
+
+.product-bg::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../../public/bg-products.jpeg") no-repeat center center;
+  background-size: cover;
+  z-index: -2;
+}
+
+.product-bg::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(69, 30, 47, 0.93);
+  z-index: -1;
+}
+
 .heading-font {
   font-family: "Optima", sans-serif;
 }
@@ -166,4 +194,63 @@
 
 .shadow-one {
   box-shadow: 0 0 42px rgba(93, 42, 66, 0.36);
+}
+
+.queryform {
+  position: relative;
+  overflow: hidden;
+  height: 600px;
+}
+
+.queryform::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1470px;
+  height: 100%;
+  background: url("../../public/photo1.png") no-repeat center center;
+  background-size: cover;
+  z-index: -2;
+}
+
+.queryform::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(69, 30, 47, 0.8);
+  z-index: -1;
+}
+
+.service-bg {
+  position: relative;
+  overflow: hidden;
+  height: 500px;
+}
+
+.service-bg::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  opacity: 0.4;
+  height: 100%;
+  background: url("../../public/photo1-ourwork.png") no-repeat center center;
+  background-size: cover;
+  z-index: -2;
+}
+
+.service-bg::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(237, 223, 213, 0.4), #fdf3ed);
+  z-index: -1;
 }
