--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -179,8 +179,10 @@
   height: 100%;
   background-image: linear-gradient(
     to top right,
-    rgba(57, 29, 40, 0.96),
-    rgba(65, 22, 40, 0.98)
+    rgba(63, 24, 39, 0.95),
+    rgba(56, 19, 34, 0.98),
+    rgba(56, 19, 34, 0.95),
+    rgba(67, 28, 44, 0.95)
   );
   z-index: -1;
 }
@@ -255,7 +257,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: #fdf3ed0e;
+  background: #fdf3ed2c;
   z-index: -1;
 }
 
@@ -297,4 +299,34 @@
 
 .portfolio-img:hover .hover-content {
   opacity: 1;
+}
+
+.booth-design-bg {
+  position: relative;
+  overflow: hidden;
+  height: 500px;
+}
+
+.booth-design-bg::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  opacity: 0.3;
+  height: 100%;
+  background: url("../../public/booth-design-bg.png") no-repeat center center;
+  background-size: cover;
+  z-index: -2;
+}
+
+.booth-design-bg::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fdf3ed47;
+  z-index: -1;
 }
