--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -272,22 +272,12 @@
   top: 0;
   left: 0;
   width: 100%;
-  opacity: 0.4;
+  opacity: 1;
   height: 100%;
-  background: url("../../public/photo1-ourwork.png") no-repeat center center;
+  background: url("../../public/bg-gradient.png");
+  background-blend-mode: darken;
   background-size: cover;
   z-index: -2;
-}
-
-.featured-bg::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to bottom, rgba(253, 243, 237, 0.08), hsl(332, 38%, 26%));
-  z-index: -1;
 }
 
 .portfolio-img {
