--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -406,6 +406,24 @@
   z-index: -1;
 }
 
+.trade-show-bg {
+  position: relative;
+  overflow: hidden;
+  height: 500px;
+}
+
+.trade-show-bg::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../../public/trade-show-bg.png") no-repeat center center;
+  background-size: cover;
+  z-index: -2;
+}
+
 /* .shadow-two {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 } */
