--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -409,10 +409,28 @@
 .trade-show-bg {
   position: relative;
   overflow: hidden;
-  height: 360px;
+  height: 450px;
 }
 
 .trade-show-bg::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../../public/trade-show-bg.png") no-repeat center center;
+  background-size: cover;
+  z-index: -2;
+}
+
+.detail-trade-show-bg {
+  position: relative;
+  overflow: hidden;
+  height: 500px;
+}
+
+.detail-trade-show-bg::before {
   content: "";
   position: absolute;
   top: 0;
