--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -445,3 +445,30 @@
 /* .shadow-two {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 } */
+
+.us-bg {
+  position: relative;
+  overflow: hidden;
+}
+
+.us-bg::before {
+  content: "";
+  position: absolute;
+  top: -400px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../../public/us1.svg") no-repeat center center;
+  z-index: -2;
+}
+
+.us-bg::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fdf3edda;
+  z-index: -1;
+}
