--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -472,3 +472,21 @@
   background-color: #fdf3edda;
   z-index: -1;
 }
+
+.single-location-bg {
+  position: relative;
+  overflow: hidden;
+  height: 450px;
+}
+
+.single-location-bg::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../../public/location-detail-bg.png") no-repeat center center;
+  background-size: cover;
+  z-index: -2;
+}
