--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,41 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.cdnfonts.com/css/optima");
-@import url("https://db.onlinewebfonts.com/c/1f6ff2bc78822f67fe0ffe6dabf9b905?family=Nacelle+SemiBold");
-@import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Doto:wght@100..900&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
 
 @font-face {
-  font-family: "Optima";
-  font-style: normal;
-  font-weight: normal;
-  src: local("Optima"), url("/OPTIMA.woff") format("woff");
+  font-family: "Jost-900";
+  src: url("/Oswald-Light.ttf");
 }
 
 @font-face {
-  font-family: "Optima Italic";
-  font-style: normal;
-  font-weight: normal;
-  src: local("Optima Italic"), url("/Optima_Italic.woff") format("woff");
+  font-family: "Jost-700";
+  src: url("/Oswald-Light.ttf");
 }
 
 @font-face {
-  font-family: "Optima Medium";
-  font-style: normal;
-  font-weight: normal;
-  src: local("Optima Medium"), url("/Optima Medium.woff") format("woff");
+  font-family: "Jost-600";
+  src: url("/Oswald-Light.ttf");
 }
 
 @font-face {
-  font-family: "Optima Bold";
-  font-style: normal;
-  font-weight: normal;
-  src: local("Optima Bold"), url("/OPTIMA_B.woff") format("woff");
+  font-family: "Jost-400";
+  src: url("/Oswald-Light.ttf");
 }
 
 @layer base {
   :root {
-    --background: 22, 80%, 96%; /*#FDF3ED*/
+    --background: 255, 100%, 100%; /*#FDF3ED*/
     --foreground: 240 10% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 240 10% 3.9%;
@@ -44,7 +34,7 @@
     --popover-foreground: 240 10% 3.9%;
     --primary: 69, 74%, 46%; /*#B0CB1F*/
     --primary-foreground: 0 0% 98%;
-    --secondary: 332 38% 26%; /* #5D2A42; */
+    --secondary: 0, 0%, 0%; /* #986D3F; */
     --secondary-foreground: 240 5.9% 10%;
     --muted: 240 4.8% 95.9%;
     --muted-foreground: 240 3.8% 46.1%;
@@ -109,7 +99,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    font-family: "Funnel Sans", sans-serif;
+    font-family: "Jost-400";
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-smooth: never;
@@ -149,6 +139,7 @@
 .hero {
   position: relative;
   overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.621);
 }
 
 .hero::before {
@@ -157,22 +148,12 @@
   top: 0;
   left: 0;
   width: 100%;
-  opacity: 0.6;
+  opacity: 0.8;
   height: 100%;
   background: url("../../public/hero-bg.gif") no-repeat center center;
+  mix-blend-mode: darken;
   background-size: cover;
   z-index: -2;
-}
-
-.hero::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to bottom, rgba(237, 223, 213, 0.4), #fdf3ed);
-  z-index: -1;
 }
 
 .hero h2 {
@@ -207,16 +188,30 @@
   height: 100%;
   background-image: linear-gradient(
     to top right,
-    rgba(63, 24, 39, 0.95),
-    rgba(56, 19, 34, 0.98),
-    rgba(56, 19, 34, 0.95),
-    rgba(67, 28, 44, 0.95)
+    rgba(0, 0, 0, 0.9),
+    rgba(0, 0, 0, 0.92),
+    rgba(0, 0, 0, 0.94),
+    rgba(10, 17, 4, 0.93)
   );
   z-index: -1;
 }
 
 .heading-font {
-  font-family: "Optima Bold";
+  font-family: "Jost-900";
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+.heading-font-700 {
+  font-family: "Jost-700";
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+.heading-font-600 {
+  font-family: "Jost-600";
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
 .footer-list > * {
@@ -243,6 +238,7 @@
 .queryform::before {
   content: "";
   position: absolute;
+  filter: grayscale(70%);
   top: 0;
   left: 0;
   width: 100%; /* Set width to 100% for responsiveness */
