--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -313,6 +313,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  filter: grayscale(70%);
   opacity: 1;
   height: 100%;
   background: url("../../public/portfolio-bg.png");
@@ -454,7 +455,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #fdf3edda;
+  background-color: #ffffffda;
   z-index: -1;
 }
 
