--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -471,6 +471,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  filter: grayscale(70%);
   height: 100%;
   background: url("../../public/location-detail-bg.png") no-repeat center center;
   background-size: cover;
