--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -376,11 +376,12 @@
 .booth-design-bg::before {
   content: "";
   position: absolute;
+  filter: grayscale(30%);
   top: 0;
-  left: 0;
-  width: 100%;
-  filter: grayscale(70%);
   opacity: 0.3;
+  left: 0;
+  mix-blend-mode: multiply;
+  width: 100%;
   height: 100%;
   background: url("../../public/booth-design-bg.png") no-repeat center center;
   background-size: cover;
@@ -394,7 +395,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: #fdf3ed47;
+  background: #00000076;
   z-index: -1;
 }
 
