--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -504,3 +504,14 @@
 .fadeInOut {
   animation: fadeInOut 1s ease-in-out;
 }
+
+[data-ut-element="button"] {
+  background-color: transparent;
+  color: #000000;
+  font-weight: 500;
+  border-radius: 6px;
+  border-width: 1px;
+  border-color: #000000;
+  width: 100%;
+  height: 2.15rem;
+}
