--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -506,12 +506,12 @@
 }
 
 [data-ut-element="button"] {
-  background-color: transparent;
-  color: #000000;
-  font-weight: 500;
-  border-radius: 6px;
-  border-width: 1px;
-  border-color: #000000;
-  width: 100%;
-  height: 2.15rem;
+  background-color: transparent !important;
+  color: #000000 !important;
+  font-weight: 500 !important;
+  border-radius: 6px !important;
+  border-width: 1px !important;
+  border-color: #000000 !important;
+  width: 100% !important;
+  height: 2.15rem !important;
 }
