--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -214,6 +214,40 @@
   z-index: -1;
 }
 
+.product-bg-white {
+  position: relative;
+  overflow: hidden;
+}
+
+.product-bg-white::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background: url("../../public/bg-products.jpg") no-repeat center center; */
+  background-size: cover;
+  z-index: -2;
+}
+
+.product-bg-white::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to top right,
+    rgba(255, 255, 255, 0.9),
+    /* Soft white */ rgba(255, 255, 255, 0.95) 40%,
+    /* Slightly brighter white */ rgba(10, 17, 4, 0.6) 70%,
+    /* Dark grayish tone */ rgba(0, 0, 0, 0.8) /* Deep blackish */
+  );
+  z-index: -1;
+}
+
 .heading-font {
   font-family: "Jost-900";
   font-optical-sizing: auto;
