--- a/src/app/top-trade-shows/[show_name]/styles.css
+++ b/src/app/top-trade-shows/[show_name]/styles.css
@@ -1,14 +1,18 @@
 /* Style for <p> tags */
 #show_name_desc p {
-  font-size: 16px; /* text-[16px] */
+  font-size: 18px; /* text-[16px] */
   margin-top: 1rem; /* mt-4 */
   line-height: 26px; /* leading-[26px] */
   text-align: justify;
 }
 
+#show_name_desc p strong {
+  font-weight: 600;
+}
 /* Style for <h3> tags */
 #show_name_desc h3 {
-  font-size: 1.875rem; /* text-3xl */
+  font-family: "Jost-700";
+  font-size: 22px; /* text-3xl */
   line-height: 2.25rem; /* line height for 3xl */
   margin-top: 1.5rem; /* mt-6 */
   color: #000000; /* text-secondary */
