--- a/src/app/blogs/[blog_id]/styles.css
+++ b/src/app/blogs/[blog_id]/styles.css
@@ -1,11 +1,20 @@
 #blog_content p {
   color: black;
+  font-size: 18px;
+  line-height: 26px;
   text-align: justify;
+}
+
+#blog_content p strong {
+  font-weight: 600;
 }
 
 #blog_content h3 {
   color: black;
   font-weight: 700;
+  font-family: "Jost-700";
+  font-size: 22px; /* text-3xl */
+  line-height: 2.25rem; /* line height for 3xl */
 }
 
 #blog_content ul {
