--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,16 @@
   src: url("/Oswald-Light.ttf");
 }
 
+@font-face {
+  font-family: "PT-sans-regular";
+  src: url("/PT_Sans-Narrow-Web-Regular.ttf");
+}
+
+@font-face {
+  font-family: "PT-sans-bold";
+  src: url("/PT_Sans-Narrow-Web-Bold.ttf");
+}
+
 .cke_notifications_area {
   display: none;
 }
@@ -104,7 +114,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    font-family: "PT Sans Narrow", serif;
+    font-family: "PT-sans-regular";
     font-weight: 300;
     font-style: normal;
   }
