--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,7 +120,7 @@
   }
 }
 /* Custom styles for PhoneInput */
-/* .react-tel-input {
+.react-tel-input {
   width: 100%;
   margin-bottom: 10px;
 }
@@ -130,11 +130,12 @@
   color: hsl(var(--secondary));
   border-radius: 4px;
   padding: 10px;
+  width : 100% !important;
 }
 
 .react-tel-input .flag-dropdown {
   border: 1px solid hsl(var(--secondary) / 0.7);
-} */
+}
 
 .funnel-sans {
   font-family: "Funnel Sans", sans-serif;
