--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -195,7 +195,19 @@
   line-height: 1.3;
   z-index: 2; /* Ensures text appears above the pseudo-element */
 }
-
+.mobile-hero{
+  top:10;
+  left:100;
+  right:100;
+  width: 85%;
+  opacity: 0.8;
+  height: 35%;
+  background: url("../../public/hero-bg.gif") no-repeat center center;
+  mix-blend-mode: darken;
+  background-size: cover;
+  z-index: -2;
+  border-radius: 10px;
+}
 .product-bg {
   position: relative;
   overflow: hidden;
