--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -373,7 +373,7 @@
 .featured-bg {
   position: relative;
   overflow: hidden;
-  height: 450px;
+  height: 370px;
 }
 
 .featured-bg::before {
@@ -382,10 +382,10 @@
   top: 0;
   left: 0;
   width: 100%;
-  filter: grayscale(70%);
   opacity: 1;
   height: 100%;
-  background: url("../../public/portfolio-bg.png");
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9)),
+    url("../../public/portfolio-bg.jpeg");
   background-blend-mode: darken;
   background-size: cover;
   z-index: -2;
@@ -434,20 +434,19 @@
 .booth-design-bg {
   position: relative;
   overflow: hidden;
-  height: 500px;
+  height: 370px;
 }
 
 .booth-design-bg::before {
   content: "";
   position: absolute;
-  filter: grayscale(30%);
   top: 0;
-  opacity: 0.3;
   left: 0;
-  mix-blend-mode: multiply;
+  mix-blend-mode: darken;
   width: 100%;
   height: 100%;
-  background: url("../../public/booth-design-bg.png") no-repeat center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7)),
+    url("../../public/portfolio-bg.jpeg") no-repeat center center;
   background-size: cover;
   z-index: -2;
 }
@@ -472,14 +471,25 @@
 .trade-show-bg::before {
   content: "";
   position: absolute;
-  filter: grayscale(70%);
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("../../public/trade-show-bg.png") no-repeat center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7)),
+    url("../../public/portfolio-bg.jpeg") no-repeat center center;
   background-size: cover;
   z-index: -2;
+}
+
+.trade-show-bg::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #00000076;
+  z-index: -1;
 }
 
 .detail-trade-show-bg {
