made about page responsive

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,6 +119,10 @@
     font-style: normal;
   }
 }
+.text-xl-1 {
+  font-size: 1.35rem /* 20px */;
+  line-height: 1.55rem /* 28px */;
+}
 /* Custom styles for PhoneInput */
 .react-tel-input {
   width: 100%;
