search box changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -532,7 +532,7 @@
 
 @media (max-width: 768px) {
   .single-location-bg {
-    height: 650px;
+    height: 500px;
     border-radius: 0 0 60px 60px;
   }
 }
@@ -546,7 +546,9 @@
   width: 100%;
   filter: grayscale(70%);
   height: 100%;
-  background: url("../../public/location-detail-bg.png") no-repeat center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9)),
+    url("../../public/portfolio-bg.jpeg");
+  background-blend-mode: darken;
   background-size: cover;
   z-index: -2;
 }
