--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -446,8 +446,19 @@
 .trade-show-bg {
   position: relative;
   overflow: hidden;
-  height: 390px;
+  height: 470px;
 }
+@media (max-width: 599px) {
+  /* Mobile view */
+  .trade-show-bg {
+    height: 480px;
+  }
+}
+/* @media (min-width: 600px) and (max-width: 1100px) {
+  .trade-show-bg {
+    height: 500px;
+  }
+} */
 
 .trade-show-bg::before {
   content: "";
