--- a/src/app/embla.css
+++ b/src/app/embla.css
@@ -90,8 +90,8 @@
   border: 0;
   padding: 0;
   margin: 0;
-  width: 1rem;
-  height: 1rem;
+  width: 0.65rem;
+  height: 0.65rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -111,4 +111,10 @@
 }
 .embla__dot--selected:after {
   box-shadow: inset 0 0 0 0.2rem var(--text-body);
+}
+
+@media (max-width: 768px) {
+  .embla__slide {
+    padding-left: 10px;
+  }
 }
