--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -174,6 +174,7 @@
   color: #b0cb1f;
 }
 
+/* Hero Section Styling */
 .hero {
   position: relative;
   overflow: hidden;
@@ -199,6 +200,29 @@
   position: relative;
   line-height: 1.3;
   z-index: 2; /* Ensures text appears above the pseudo-element */
+}
+
+/* Shadow Div to Control Spacing */
+.shadow-div {
+  height: 120px; /* Adjust this value for spacing control */
+}
+
+@media (max-height: 900px) {
+  .shadow-div {
+    height: 160px; /* Increase spacing for smaller screen heights */
+  }
+}
+
+@media (max-height: 768px) {
+  .shadow-div {
+    height: 200px; /* Further increase spacing for smaller laptops */
+  }
+}
+
+@media (min-height: 1080px) {
+  .shadow-div {
+    height: 100px; /* Reduce spacing for larger screens */
+  }
 }
 
 .product-bg {
@@ -227,10 +251,10 @@
   height: 100%;
   background-image: linear-gradient(
     to top right,
-    rgba(0, 0, 0, 0.88),
-    rgba(0, 0, 0, 0.89),
-    rgba(0, 0, 0, 0.9),
-    rgba(10, 17, 4, 0.92)
+    rgba(0, 0, 0, 0.68),
+    rgba(0, 0, 0, 0.74),
+    rgba(0, 0, 0, 0.8),
+    rgba(10, 17, 4, 0.86)
   );
   z-index: -1;
 }
@@ -311,7 +335,7 @@
 .queryform::before {
   content: "";
   position: absolute;
-  filter: grayscale(70%);
+  filter: grayscale(50%);
   top: 0;
   left: 0;
   width: 100%; /* Set width to 100% for responsiveness */
@@ -430,6 +454,36 @@
 }
 
 .booth-design-bg::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #00000076;
+  z-index: -1;
+}
+
+.booth-design-bg-query {
+  position: relative;
+  overflow: hidden;
+  height: 370px;
+}
+
+.booth-design-bg-query::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.6)),
+    url("../../public/new-bg.jpeg");
+  background-size: cover;
+  z-index: -2;
+}
+
+.booth-design-bg-query::after {
   content: "";
   position: absolute;
   top: 0;
