--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -546,11 +546,11 @@
   content: "";
   position: absolute;
   top: 0;
-  filter: grayscale(70%);
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("../../public/trade-show-bg.png") no-repeat center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)),
+    url("../../public/new-bg.jpeg");
   background-size: cover;
   z-index: -2;
 }
