--- a/src/app/embla.css
+++ b/src/app/embla.css
@@ -27,7 +27,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: var(--slide-height);
+  height: var(--slide-height)!important;
   user-select: none;
 }
 .embla__controls {
