--- a/src/app/[slug]/blog_id.css
+++ b/src/app/[slug]/blog_id.css
@@ -6,15 +6,26 @@
   }
   
   #blog_content p strong {
-    font-weight: 600;
+    font-weight: bold;
   }
   
-  #blog_content h3 {
-    color: black;
-    font-weight: 700;
+  #blog_content h2 {
     font-family: "Jost-700";
     font-size: 22px; /* text-3xl */
     line-height: 2.25rem; /* line height for 3xl */
+    margin-top: 1.5rem; /* mt-6 */
+    color: #000000; /* text-secondary */
+    font-weight: 600; /* font-semibold */
+  }
+
+  /* Style for <h3> tags */
+  #blog_content h3 {
+    font-family: "Jost-600";
+    font-size: 20px; /* text-3xl */
+    line-height: 2.25rem; /* line height for 3xl */
+    margin-top: 1.5rem; /* mt-6 */
+    color: #000000; /* text-secondary */
+    font-weight: 600; /* font-semibold */
   }
   
   #blog_content ul {
