--- a/src/app/locations/[location_name]/style.css
+++ b/src/app/locations/[location_name]/style.css
@@ -1,18 +1,30 @@
 /* Style for <p> tags */
 #show_name_desc p {
-  font-size: 16px; /* text-[16px] */
+  font-size: 18px; /* text-[16px] */
   margin-top: 1rem; /* mt-4 */
   line-height: 26px; /* leading-[26px] */
   text-align: justify;
 }
 
-/* #show_name_desc p strong {
-  font-weight: 700;
-} */
-/* Style for <h3> tags */
-#show_name_desc h3 {
+#show_name_desc p strong {
+  font-weight: bold;
+}
+
+
+/* Style for <h2> tags */
+#show_name_desc h2 {
   font-family: "Jost-700";
   font-size: 22px; /* text-3xl */
+  line-height: 2.25rem; /* line height for 3xl */
+  margin-top: 1.5rem; /* mt-6 */
+  color: #000000; /* text-secondary */
+  font-weight: 600; /* font-semibold */
+}
+
+/* Style for <h3> tags */
+#show_name_desc h3 {
+  font-family: "Jost-600";
+  font-size: 20px; /* text-3xl */
   line-height: 2.25rem; /* line height for 3xl */
   margin-top: 1.5rem; /* mt-6 */
   color: #000000; /* text-secondary */
