--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -513,10 +513,14 @@
 
 @media (max-width: 720px) {
   .detail-trade-show-bg {
-    height: 620px;
+    height: 600px;
   }
 }
-
+@media (max-width : 480px ){
+  .detail-trade-show-bg {
+    height: 650px;
+  }
+}
 /* .shadow-two {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 } */
